# rt-rs

./: .gitignore  Cargo.toml  LICENSE
assets/: cornel.blend  cornel_adv.blend  scene.blend
src/: aabb.rs  bvh.rs  camera.rs  color.rs  denoise.rs  frame.rs  hit.rs  image.rs  integrator.rs  light.rs  main.rs  material.rs  mesh.rs  ray.rs  scene.rs  shapes.rs  surface.rs  transform.rs  utils.rs  vec.rs  vertex.rs
