[package]
name = "rt-rs"
version = "0.1.0"
authors = ["gan74 <gregoire.angerand@gmail.com>"]
edition = "2018"

[dependencies]
gltf = { version = "0.15", features = ["KHR_lights_punctual"] }
rand = "*"
rayon = "*"


show-image = { git = "https://github.com/gan74/show-image-rs.git", branch = "resize_fixes", features = ["save"] }