[package]
name = "rt-rs"
version = "0.1.0"
authors = ["gan74 <gregoire.angerand@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 3

[dependencies]
gltf = { version = "1.0", features = ["KHR_materials_transmission"] }
rand = "*"
rayon = "*"

show-image = { version = "0.13.1", features = ["save"] }

