[package]
name = "rt-rs"
version = "0.1.0"
authors = ["gan74 <gregoire.angerand@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.dev]
opt-level = 3

[dependencies]
rand = "*"
rayon = "*"

show-image = { version = "0.13.1", features = ["save"] }
gltf = { git = "https://github.com/gan74/gltf", features = ["KHR_materials_transmission", "KHR_materials_emissive_strength"] }

